--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
-/* Write your CSS here! */
+
+body {
+    background-color: rgb(192, 201, 202);
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+    display: block;    
+}
+.mainHeading {
+    color: red;
+    background-color: rgb(8, 13, 26);
+    text-align:center;    
+}
+.funParagraph {
+    color:green;
+}
+h2 {
+    text-align: center;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+#testP {
+    font-size: larger;
+}
